--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,36 @@ nav {
     margin-bottom: 20%;
 }
 
+label {
+    margin-left: 25%;
+}
+
+input[type=text] {
+    padding: 12px 20px;
+    width: 37%;
+    font-size: 25px;
+    font-family: "Madimi One", sans-serif;
+    border-radius: 10px;
+    margin-left: 50px;
+}
+
+.text-container {
+    margin-left: 25%;
+    width: 50%;
+}
+
+.spacer {
+    height: 40px;
+}
+
+.submit {
+    background-color: gold;
+    font-size: 25px;
+    font-family: "Madimi One", sans-serif;
+    border-radius: 10px;
+}
+
+.submit:hover {
+    background-color: rgb(255, 233, 106);
+    border-color: white;
+}
